<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvConfirmTitle"
        style="@style/fragmentNewGame_textView_playerNameSettingTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/end_game_title_dialog" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/colorLightGray" />

    <TextView
        android:id="@+id/tvConfirmMessage"
        style="@style/confirm_exit_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_exit_message" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/colorLightGray" />

    <Button
        android:id="@+id/btnEndGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnEndGame" />

</LinearLayout>