<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvConfirmTitle"
        style="@style/fragmentNewGame_textView_playerNameSettingTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_exit_message" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/colorLightGray" />

    <TextView
        android:id="@+id/tvConfirmMessage"
        style="@style/confirm_exit_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_exit_message" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/colorLightGray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOK"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnOK" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnCancel" />

    </LinearLayout>

</LinearLayout>