<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/fragmentNewGame_textView_playerNameSettingTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/playerName_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/default_padding"
                android:text="@string/player1" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@color/colorLightGray" />

            <EditText
                android:id="@+id/edtPlayer1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:padding="@dimen/default_padding"
                android:singleLine="true" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/colorLightGray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/default_padding"
                android:text="@string/player2" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@color/colorLightGray" />

            <EditText
                android:id="@+id/edtPlayer2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:padding="@dimen/default_padding"
                android:singleLine="true" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/colorLightGray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/default_padding"
                android:text="@string/player3" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@color/colorLightGray" />

            <EditText
                android:id="@+id/edtPlayer3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:padding="@dimen/default_padding"
                android:singleLine="true" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/colorLightGray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/default_padding"
                android:text="@string/player4" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@color/colorLightGray" />

            <EditText
                android:id="@+id/edtPlayer4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:padding="@dimen/default_padding"
                android:singleLine="true" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/colorLightGray" />

        <TextView
            style="@style/fragmentNewGame_textView_playerNameSettingTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_setting_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:padding="@dimen/default_padding"
                android:text="@string/setting_number_of_turns_title" />

            <EditText
                android:id="@+id/edtNumberOfTurns"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="number"
                android:text="10" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/colorLightGray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:padding="@dimen/default_padding"
                android:text="@string/setting_hide_number_of_current_turns_title" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <CheckBox
                    android:id="@+id/cbHideCurrentTurns"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/colorLightGray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:padding="@dimen/default_padding"
                android:text="@string/setting_hide_current_scrore_title" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <CheckBox
                    android:id="@+id/cbHideCurrentScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

        </LinearLayout>

        <com.andexert.library.RippleView
            rv_centered="true"
            rv_color="@color/colorLightGray"
            rv_rippleDuration="100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnStartGame"
                style="@style/fragmentNewGame_textView_playerNameSettingTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_right_arrow"
                android:text="@string/start_game"
                android:textAllCaps="false" />

        </com.andexert.library.RippleView>

    </LinearLayout>

</ScrollView>
